--- a/hush/pom.xml
+++ b/hush/pom.xml
@@ -435,26 +435,26 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.apache.hbase</groupId>-->
-      <!--<artifactId>hbase-annotations</artifactId>-->
-      <!--<version>1.0.0</version>-->
-      <!--<scope>compile</scope>-->
-      <!--<exclusions>-->
-        <!--<exclusion>-->
-          <!--<artifactId>jdk.tools</artifactId>-->
-          <!--<groupId>jdk.tools</groupId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<artifactId>findbugs-annotations</artifactId>-->
-          <!--<groupId>com.github.stephenc.findbugs</groupId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<artifactId>log4j</artifactId>-->
-          <!--<groupId>log4j</groupId>-->
-        <!--</exclusion>-->
-      <!--</exclusions>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-annotations</artifactId>
+      <version>1.0.0</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>jdk.tools</artifactId>
+          <groupId>jdk.tools</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>findbugs-annotations</artifactId>
+          <groupId>com.github.stephenc.findbugs</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>log4j</artifactId>
+          <groupId>log4j</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     <dependency>
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-protocol</artifactId>
