--- a/pom.xml
+++ b/pom.xml
@@ -450,6 +450,11 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-annotations</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
       <version>3.4.6</version>
@@ -932,7 +937,6 @@
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-annotations</artifactId>
       <version>1.0.0</version>
-      <scope>compile</scope>
       <exclusions>
         <exclusion>
           <artifactId>findbugs-annotations</artifactId>
