More cleanup on all examples.

--- a/hush/pom.xml
+++ b/hush/pom.xml
@@ -58,6 +58,7 @@
           <target>${jdkLevel}</target>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
+          <compilerArgument>-Xlint:unchecked</compilerArgument>
         </configuration>
       </plugin>
       <plugin>
