New example for ch08.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
     <module>ch05</module>
     <module>ch06</module>
     <module>ch07</module>
+    <module>ch08</module>
     <module>ch09</module>
     <module>ch11</module>
     <module>hush</module>
