--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
     <module>ch08</module>
     <module>ch09</module>
     <module>ch11</module>
+    <module>ch13</module>
     <module>hush</module>
   </modules>
 
