--- a/cluster/ansible/install-security.yml
+++ b/cluster/ansible/install-security.yml
@@ -1,5 +1,13 @@
 ---
-# Special playbook to install only SSL related details.
+# Sub playbook to install all security components needed.
+
+- name: Set up Kerberos KDC
+  hosts: kdc_server
+  remote_user: larsgeorge
+  become: yes
+
+  roles:
+    - { role: kdc-server, when: KERBEROS_ENABLED == true }
 
 - name: SSL Phase 1 (Prepare Servers)
   hosts: all
@@ -10,7 +18,7 @@
     - { role: ssl-phase-1, when: SSL_ENABLED == true }
 
 - name: SSL Phase 2 (Sign CSRs)
-  hosts: kdc_server
+  hosts: kdc-server
   remote_user: larsgeorge
   become: yes
 
