--- a/cluster/ansible/install-security.yml
+++ b/cluster/ansible/install-security.yml
@@ -1,35 +1,18 @@
 ---
 # Sub playbook to install all security components needed.
 
-- name: Set up Kerberos KDC
-  hosts: kdc_server
-  remote_user: larsgeorge
-  become: yes
-
-  roles:
-    - { role: kdc-server, when: KERBEROS_ENABLED == true }
-
 - name: SSL Phase 1 (Prepare Servers)
   hosts: all
-  remote_user: larsgeorge
-  become: yes
-
   roles:
-    - { role: ssl-phase-1, when: SSL_ENABLED == true }
+    - { role: ssl-phase-1, when: SECURITY_ENABLED == true }
 
 - name: SSL Phase 2 (Sign CSRs)
-  hosts: kdc-server
-  remote_user: larsgeorge
-  become: yes
-
+  hosts: kdc_server
   roles:
-    - { role: ssl-phase-2, when: SSL_ENABLED == true }
+    - { role: ssl-phase-2, when: SECURITY_ENABLED == true }
 
 - name: SSL Phase 3 (Install CSRs and Truststores)
   hosts: all
-  remote_user: larsgeorge
-  become: yes
-
   roles:
-    - { role: ssl-phase-3, when: SSL_ENABLED == true }
+    - { role: ssl-phase-3, when: SECURITY_ENABLED == true }
 
