--- a/cluster/ansible/roles/kdc-server/tasks/createprincs.yml
+++ b/cluster/ansible/roles/kdc-server/tasks/createprincs.yml
@@ -21,23 +21,29 @@
   when: principal_list.stdout.find('krbtgt/{{ KRB_REALM }}@{{ KRB_REALM }}') == -1
 
 - name: Add SPNs
-  command: kadmin.local -q 'add_principal -randkey {{ item[1] }}/{{ item[0] }}@{{ KRB_REALM }}'
+  command: kadmin.local -q 'add_principal -randkey {{ item[1] }}/{{ item[0] }}.{{ CLUSTER_DOMAIN }}@{{ KRB_REALM }}'
   with_nested: 
-    - groups.cluster
+    - "{{ groups.all }}"
     - "{{ KRB_PRINCIPALS }}"
-  when: principal_list.stdout.find('{{ item[1] }}/{{ item[0] }}@{{ KRB_REALM }}') == -1
+  when: principal_list.stdout.find('{{ item[1] }}.{{ CLUSTER_DOMAIN }}/{{ item[0] }}@{{ KRB_REALM }}') == -1
 
 - name: Export keytabs into root account
   file: path=/root/keytabs owner=root group=root mode=700 state=directory
-# usually a services has its own principal and the special HTTP principal for its web UIs...
-- command: kadmin.local -q 'xst -k /root/keytabs/{{ item[1] }}-{{ item[0] }}.keytab -norandkey -q {{ item[1] }}/{{ item[0] }}@{{ KRB_REALM }} HTTP/{{ item[0] }}@{{ KRB_REALM }}'
+  # usually a services has its own principal and the special HTTP principal for its web UIs...
+- command: kadmin.local -q 'xst -k /root/keytabs/{{ item[1] }}-{{ item[0] }}.keytab -norandkey -q {{ item[1] }}/{{ item[0] }}.{{ CLUSTER_DOMAIN }}@{{ KRB_REALM }} HTTP/{{ item[0] }}.{{ CLUSTER_DOMAIN }}@{{ KRB_REALM }}'
   args:
     creates: /root/keytabs/{{ item[1] }}-{{ item[0] }}.keytab
   with_nested:
-    - groups.cluster
+    - "{{ groups.all }}"
     - "{{ KRB_SERVICES_WITH_HTTP }}"
 # but for the history server there is only a single principal in the keytab
 - command: kadmin.local -q 'xst -k /root/keytabs/mapred-{{ item }}.keytab -norandkey -q mapred/{{ item }}@{{ KRB_REALM }}'
   args:
     creates: /root/keytabs/mapred-{{ item }}.keytab
   with_items: groups.historyserver
+
+- name: Download keytabs to orchestration server
+  fetch: src=/root/keytabs/{{ item[1] }}-{{ item[0] }}.keytab dest=/tmp/keytabs/ flat=yes failonmissing=yes
+  with_nested:
+    - "{{ groups.all }}"
+    - "{{ KRB_SERVICES_WITH_HTTP }}"
